0.9.3: `backstack.executePendingStateChange()`, called in `onDestroy()`, segue animation to MVP example with object animator